# DigitalImageProcessing

./: CMakeCache.txt  CMakeLists.txt  Makefile  affine  affine_transforms.cpp  blobs  cmake_install.cmake  depth_map.cpp  imageSegmentation.txt  main  mousecallback.cpp  out  out.txt  textSeparation  textSeparation.cpp  video.cpp
AIP/: Assignment2.tar.bz2  notes.txt
AIP/Assignment1/: CMakeCache.txt  CMakeLists.txt  Makefile  PSNR.csv  ReadMe.md  ReadMe.md~  cleanData.py  cmake_install.cmake  four  haris.cpp  harris.cpp  one  one.cpp  plot.py  three  two  two.cpp
AIP/Assignment2/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  ass2.cpp  cmake_install.cmake  out
AIP/Assignment3/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  depth_map.cpp  out  stereo.py  theano_basics.py
AIP/Assignment4/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.txt  cie_learn.cpp  cmake_install.cmake  color_correct.cpp  color_corrected  out  part1  part1.cpp  part3  part3.cpp  part3.py  test.py
number plate/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  out.txt  prep  preprocess.cpp
pedestrian detection/: pedestrian_detect.py
segmentation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kMeans.cpp  threshold  threshold.cpp
tonbo_task/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  blob_detect.cpp  blobs  blobs.cpp  cmake_install.cmake  out.txt  readNwrite_img.cpp  read_png.c  task  task.cpp  task_1  task_1.cpp
visual_recognition/10/: CS231n Convolutional Neural Networks for Visual Recognition.html
(+16 files in other folders)
